<resources>
    <string name="app_name">Basal Body</string>
    <string name="message_no_internet_found">No internet found.Check your connection or try again</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="button_retry">Retry</string>
    <string name="message_you_have_been_logged_out_please_log_back_in">You have been logged out, Please log back in</string>
    <string name="default_notification_channel">notification channel</string>
    <string name="is_running">is running</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="message_camera_permission">Please provide camera permission</string>
    <string name="message_storage_permission">Please provide storage permission</string>
    <string name="message_storage_permission_please_provide_minimum_one_image_access">Please provide minimum one image access</string>
    <string name="message_notification_permission">Please grant Notification permission to access Notification</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="button_go_to_settings">Go to settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="button_update_now">Update Now</string>
    <string name="button_update">Update</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="label_text_camera">Camera</string>
    <string name="label_text_gallery">Gallery</string>
    <string name="label_text_files">Files</string>
    <string name="label_term_conditions">Terms &amp; Conditions</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_about_us">About Us</string>
    <string name="label_logout">Logout</string>
    <string name="label_delete_account">Delete Account</string>
    <string name="validation_gif_images_are_not_supported">GIF images are not supported</string>
    <string name="validation_some_images_are_not_supported_due_to_format_or_size">Some images are not supported due to format or size issue</string>
    <string name="validation_maximum_size_for_pdf_should_be_10_mb">Maximum size for PDF should be 10 MB</string>
    <string name="validation_maximum_size_for_image_should_be_10_mb">Maximum size for image should be 10 MB</string>
    <string name="dummy_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="validation_empty_email">Please enter email address</string>
    <string name="validation_invalid_email">Please enter valid email address</string>
    <string name="validation_empty_phone">Please enter phone number</string>
    <string name="validation_phone_min">Phone number must contain minimum 7 digits</string>
    <string name="validation_phone_max">Phone number should not contain more than 15 digits</string>
    <string name="validation_invalid_phone">Please enter valid phone number</string>
    <string name="validation_empty_password">Please enter password</string>
    <string name="validation_password_min">Password must contain minimum 8 digits</string>
    <string name="validation_password_max">Password should not contain more than 15 digits</string>
    <string name="validation_password_space">Password can’t start or end with a blank space.</string>
    <string name="validation_empty_new_password">Please enter new password</string>
    <string name="validation_new_password_min">New password must contain minimum 8 digits</string>
    <string name="validation_new_password_max">New password should not contain more than 15 digits</string>
    <string name="validation_new_password_space">New password can’t start or end with a blank space.</string>
    <string name="validation_empty_confirm_password">Please enter confirm password</string>
    <string name="validation_confirm_password_min">Confirm password must contain minimum 8 digits</string>
    <string name="validation_confirm_password_max">Confirm password should not contain more than 15 digits</string>
    <string name="validation_confirm_password_space">Confirm password can’t start or end with a blank space.</string>
    <string name="validation_empty_profile">Profile image is required</string>
    <string name="validation_empty_name">Please enter name</string>
    <string name="validation_empty_gender">Please select your gender</string>
    <string name="validation_empty_dob">Please select date of birth</string>
    <string name="validation_empty_street">Please enter Street Name and Number</string>
    <string name="validation_empty_city">Please enter City</string>
    <string name="validation_empty_state">Please enter State / Province</string>
    <string name="validation_empty_unit_number">Please enter Unit number / Building number</string>
    <string name="validation_empty_postal_code">Please enter Postal code / ZIP</string>
    <string name="validation_empty_country">Please enter Country</string>
    <string name="validation_password_and_confirm_password_must_be_same">Password and Confirm Password must be same</string>
    <string name="validation_password_and_confirm_password_does_not_match">Password and Confirm Password does not match</string>
    <string name="validation_new_password_and_confirm_password_does_not_match">New Password and Confirm Password does not match</string>
    <string name="validation_new_password_and_current_password_must_be_different">Current Password and New Password must be different</string>
    <string name="validation_phone_verify">Please verify phone number</string>
    <string name="validation_empty_otp">Please enter otp</string>
    <string name="validation_invalid_otp">Please enter valid otp</string>
    <string name="validation_empty_profile_image">Please select profile image</string>
    <string name="validation_empty_confirm_new_password">Please enter confirm new password</string>
    <string name="validation_confirm_new_password_min">Confirm new password must contain minimum 8 digits</string>
    <string name="validation_confirm_new_password_space">Confirm new password can’t start or end with a blank space.</string>
    <string name="title_no_internet">No Internet</string>
    <string name="title_update_mxb">Update MXB</string>
    <string name="title_application_is_under_maintenance">Application is Under Maintenance</string>
    <string name="message_this_app_have_limited_access_photos_which_you_selected">This app have limited access photos which you selected</string>
    <string name="message_select_up_to_3_items">Select up to 3 items</string>
    <string name="message_location_permission">Location permission is required to track your current location. Please enable it in settings.</string>
    <string name="message_location_permission_use">We are getting your location when there is an ongoing shipment and app is running.</string>
    <string name="message_force_update">A new version of MXB is available! This update is required to continue using the app. Please update now to access the latest features and improvements.</string>
    <string name="message_maintenance">Service Unavailable: MXB is undergoing maintenance. We appreciate your patience and will be back shortly!</string>
    <string name="message_normal_update">New update available! Get the best experience with the latest version of MXB. Update now or continue using the current version</string>
    <string name="message_are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="message_delete_account_confirm">Are you sure you want to delete your account? This action is irreversible and will permanently remove all your data, including your profile and settings.</string>
    <string name="item_home">Home</string>
    <string name="item_bluetooth">Bluetooth</string>
    <string name="item_calendar">Calendar</string>
    <string name="item_insights">Insights</string>
    <string name="item_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_daily_summary">Daily Summary</string>
    <string name="label_welcome_sarah">Welcome Sarah!</string>
    <string name="label_latest_temperature_reading">Latest Temperature Reading</string>
    <string name="label_last_activity_logged">Last Activity\nLogged</string>
    <string name="menstruation_nday_2">Menstruation\nDay 2</string>
    <string name="label_quick_status">Quick status</string>
    <string name="label_connect_bluetooth">Connect Bluetooth</string>
    <string name="btn_tap_to_scan">Tap to scan</string>
    <string name="label_calendar">Calendar</string>
    <string name="btn_view_all">View all</string>
    <string name="label_list_of_available_devices">Available Devices</string>
    <string name="btn_scan_for_devices">Scan for Devices</string>
    <string name="btn_connect">Connect</string>
    <string name="label_connection_status">Connection Status</string>
    <string name="label_connected">Connected</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="label_menstruation">Menstruation</string>
    <string name="label_intercourse">Intercourse</string>
    <string name="label_temperature_trend">Temperature trend</string>
    <string name="label_today">Today</string>
    <string name="label_add_activity">Add Activity</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_get_start">Get Start</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_sign_in_to_continue">Sign in to continue!</string>
    <string name="lbl_email">Email</string>
    <string name="hint_enter_your_email_here">Enter your email here</string>
    <string name="lbl_password">Password</string>
    <string name="hint_enter_password_here">Enter password here</string>
    <string name="lbl_forgot_password_que">Forgot Password?</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_or_sign_in_with">Or sign in with</string>
    <string name="don_t_have_an_account_register_now">Don’t have an account? Register Now</string>
    <string name="register_now">Register Now</string>
    <string name="lbl_select_with_contact_details_should_we_use_to_reset_your_password">Select with contact details should we use to reset your password</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="lbl_please_enter_your_email_to_reset_the_password">Please enter your email to reset the password</string>
    <string name="hint_enter_phone_no_here">Enter phone no here</string>
    <string name="lbl_please_enter_your_phone_no_to_reset_the_password">Please enter your phone no to reset the password</string>
    <string name="lbl_set_a_new_password">Set a New Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="btn_submit">Submit</string>
    <string name="lbl_get_started_now">Get Started Now</string>
    <string name="lbl_create_an_account_or_log_in_to_explore_about_our_app">Create an account or log in to explore about our app</string>
    <string name="hint_enter_your_full_name_here">Enter your full name here</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="hint_select_your_gender">Select your Gender</string>
    <string name="lbl_gender">Gender</string>
    <string name="hint_enter_your_comment_here">Enter your comment here</string>
    <string name="lbl_issue_message">Issue message</string>
</resources>