<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemHome"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/item_home"/>
    <item
        android:id="@+id/itemBluetooth"
        android:enabled="true"
        android:icon="@drawable/ic_bluetooth"
        android:title="@string/item_bluetooth"/>
    <item
        android:id="@+id/itemCalender"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/item_calendar"/>
    <item
        android:id="@+id/itemInsights"
        android:enabled="true"
        android:icon="@drawable/ic_insights"
        android:title="@string/item_insights"/>
    <item
        android:id="@+id/itemProfile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/item_profile"/>
</menu>