<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_25" />

            <include
                android:id="@+id/llToolBar"
                layout="@layout/view_toolbar"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.basalbody.app.utils.BasalTextView
                android:id="@+id/tvLabel"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_58"
                android:text="@string/lbl_get_started_now"
                android:textColor="@color/colorText_4B4B4B"
                android:textSize="@dimen/sp_24"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@id/llToolBar"
                app:textStyle="bold" />

            <com.basalbody.app.utils.BasalTextView
                android:id="@+id/tvMessage"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:text="@string/lbl_create_an_account_or_log_in_to_explore_about_our_app"
                android:textColor="@color/colorText_989898"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@id/tvLabel" />

            <com.basalbody.app.utils.BasalTextField
                android:id="@+id/etFullName"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_29"
                app:btf_drawableStart="@drawable/ic_user"
                app:btf_hint="@string/hint_enter_your_full_name_here"
                app:btf_imeOptions="actionNext"
                app:btf_inputType="textPersonName"
                app:btf_labelText="@string/lbl_full_name"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

            <com.basalbody.app.utils.BasalTextField
                android:id="@+id/etEmail"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:btf_drawableStart="@drawable/ic_email"
                app:btf_hint="@string/hint_enter_your_email_here"
                app:btf_imeOptions="actionNext"
                app:btf_inputType="textEmailAddress"
                app:btf_labelText="@string/lbl_email"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etFullName" />


            <com.basalbody.app.utils.BasalTextField
                android:id="@+id/etGender"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:btf_drawableStart="@drawable/ic_gender"
                app:btf_hint="@string/hint_select_your_gender"
                app:btf_imeOptions="actionNext"
                app:btf_inputType="textEmailAddress"
                app:btf_labelText="@string/lbl_gender"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />


            <com.basalbody.app.utils.BasalTextField
                android:id="@+id/etPhone"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:btf_drawableStart="@drawable/ic_call"
                app:btf_hint="@string/hint_enter_phone_no_here"
                app:btf_imeOptions="actionNext"
                app:btf_inputType="number"
                app:btf_maxLength="10"
                app:btf_labelText="@string/lbl_phone_number"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etGender" />

            <com.basalbody.app.utils.BasalTextField
                android:id="@+id/etPass"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:btf_drawableStart="@drawable/ic_password_lock"
                app:btf_drawableEnd="@drawable/ic_password_eye_close"
                app:btf_hint="@string/hint_enter_password_here"
                app:btf_imeOptions="actionNextne"
                app:btf_inputType="textPassword"
                app:btf_isPassword="true"
                app:btf_labelText="@string/lbl_password"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />

            <com.basalbody.app.utils.BasalTextField
                android:id="@+id/etConfirmPass"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:btf_drawableStart="@drawable/ic_password_lock"
                app:btf_drawableEnd="@drawable/ic_password_eye_close"
                app:btf_hint="@string/hint_enter_password_here"
                app:btf_imeOptions="actionDone"
                app:btf_inputType="textPassword"
                app:btf_isPassword="true"
                app:btf_labelText="@string/lbl_confirm_password"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_check_box"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@id/etPass"/>

            <com.basalbody.app.utils.BasalTextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/lbl_forgot_password_que"
                android:textColor="@color/colorText_4B4B4B"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintTop_toBottomOf="@id/etPass"
                app:textStyle="semiBold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/FilledButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_43"
                android:text="@string/lbl_login"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPass" />

            <com.basalbody.app.utils.BasalTextView
                android:id="@+id/lblOrSignWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_43"
                android:text="@string/lbl_or_sign_in_with"
                android:textColor="@color/colorText_DC3556"
                android:textSize="@dimen/sp_14"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <View
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_1"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/lblOrSignWith"
                app:layout_constraintEnd_toStartOf="@+id/lblOrSignWith"
                app:layout_constraintStart_toStartOf="@id/glStart"
                app:layout_constraintTop_toTopOf="@+id/lblOrSignWith" />

            <View
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/lblOrSignWith"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toEndOf="@+id/lblOrSignWith"
                app:layout_constraintTop_toTopOf="@+id/lblOrSignWith" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:src="@drawable/ic_g_login"
                app:layout_constraintEnd_toEndOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/lblOrSignWith" />

            <com.basalbody.app.utils.BasalTextView
                android:id="@+id/tvRegisterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_register_now"
                android:textColor="@color/colorText_989898"
                android:textSize="@dimen/sp_14"
                android:layout_marginBottom="@dimen/dp_30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toStartOf="@id/glStart"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>